Properly lay out the appcomponent.

--- a/web/web/index.html
+++ b/web/web/index.html
@@ -9,6 +9,6 @@
     <script defer src="packages/browser/dart.js"></script>
   </head>
   <body>
-    <my-app>Loading AppComponent content here ...</my-app>
+    <chat-app>Loading AppComponent content here ...</chat-app>
   </body>
 </html>
