Add a room reference to the room messages shower.

--- a/web/lib/app_component.html
+++ b/web/lib/app_component.html
@@ -4,7 +4,7 @@
   </header>
   <section class="page">
     <div class="content">
-      <span>content</span>
+      <room-messages></room-messages>
     </div>
   </section>
   <footer class="footer"></footer>
