Refactor my stylesheet a bit.

--- a/web/lib/app_component.html
+++ b/web/lib/app_component.html
@@ -1,5 +1,5 @@
-<div class="container">
-  <header class="header">
+<div class="container bg-material">
+  <header class="header tall-shadow primary-material">
       <h1>Chatty</h1>
   </header>
   <section class="page">
