Show messages in the UI.

--- a/web/lib/src/room_messages/room_messages_component.html
+++ b/web/lib/src/room_messages/room_messages_component.html
@@ -1,8 +1,5 @@
 <div *ngFor="let message of messages">
-    <div class="message from-me fg-material short-shadow" *ngIf="isFromMe(message)">
-      <p>Message from me</p>
-    </div>
-    <div class="message from-other fg-material short-shadow" *ngIf="!isFromMe(message)">
-      <p>Message from you</p>
+    <div class="message fg-material short-shadow" [class.from-me]="isFromMe(message)">
+      <p>{{message.contents}}</p>
     </div>
 </div>
