--- a/web/lib/src/room_messages/room_messages_component.html
+++ b/web/lib/src/room_messages/room_messages_component.html
@@ -1,5 +1,6 @@
 <div *ngFor="let message of messages">
     <div class="message fg-material short-shadow" [class.from-me]="isFromMe(message)">
+      <p class="faded-text">{{message.sender.name}}</p>
       <p>{{message.contents}}</p>
     </div>
 </div>
