Add a message input component.

--- a/web/lib/app_component.html
+++ b/web/lib/app_component.html
@@ -5,6 +5,11 @@
   <section class="page">
     <div class="content">
       <room-messages></room-messages>
+
+    </div>
+    <div class="content-footer"
+          style="layout:block;">
+      <message-input></message-input>
     </div>
   </section>
 </div>
