--- a/web/lib/src/message_input/message_input.html
+++ b/web/lib/src/message_input/message_input.html
@@ -1,3 +1,3 @@
 <div class="wrapper fg-material short-shadow">
-  <input autofocus [(ngModel)]="messageText" (keyup.enter)="send()"/>
+  <input [disabled]="submitting" autofocus [(ngModel)]="messageText" (keyup.enter)="send()"/>
 </div>
