Add the room list component to the app

--- a/web/lib/app_component.html
+++ b/web/lib/app_component.html
@@ -1,14 +1,15 @@
 <div class="container bg-material">
-  <header class="header tall-shadow primary-material">
+  <header class="header primary-material tall-shadow">
       <h1>Chatty</h1>
   </header>
+  <div class="nav short-shadow fg-material">
+    <room-list></room-list>
+  </div>
   <section class="page">
     <div class="content">
       <room-messages></room-messages>
-
     </div>
-    <div class="content-footer"
-          style="layout:block;">
+    <div class="content-footer">
       <message-input></message-input>
     </div>
   </section>
